           Changes in BB version 2008.5-1
  
  o fix a references that was inaccurate and added web links to others.

  o fix bug when maximizing a function with analytic gradient supplied, and add
    a test of this.

  o changed the title (as appears on CRAN) to be more descriptive.


              BB version 2008.4-1

  o first release