@@ -102,6 +102,7 @@ dfsane <- function(par, fn, method=2, control=list(), ...) {
 ######################################
 #     MAIN LOOP:  Iteration begins
 ######################################
+    flag <- 0 # for case when tol is already ok initially and while loop is skipped
     while (normF/sqrt(n) > tol & iter <= maxit) {
  
     	# Control of steplength
